--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
     <title>Tweenize</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <ul id="tweenize-timeline">
