--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
-    <title>Tweenizer</title>
+    <title>Listalizer</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <ul id="tweenizer-timeline">
+    <ul id="listalizer-timeline">
       <!-- empty -->
     </ul>
   </body>
